Implemented User login and CRUD operation

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.mat-mdc-form-field {
+  width: 100%;
+}
+a {
+  color: white !important;
+}
+
+.active-button {
+  background-color: gray;
+}
