--- a/src/app/customer/customer.component.css
+++ b/src/app/customer/customer.component.css
@@ -1,7 +1,12 @@
 .card {
   max-width: 700px;
-  margin: 30px auto;
 }
 .mat-mdc-card-header {
   justify-content: space-between;
+}
+.listContainer {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+  padding-bottom: 40px;
 }
