--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,55 +1,57 @@
-<mat-card class="card">
-  <mat-card-header>
-    <mat-card-title>Customer Listing</mat-card-title>
-    <button mat-raised-button (click)="addCustomer()">Add +</button>
-  </mat-card-header>
-  <mat-card-content>
-    <table mat-table [dataSource]="dataSource" matSort>
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-      </ng-container>
+<div class="listContainer">
+  <mat-card class="card">
+    <mat-card-header>
+      <mat-card-title>Customer Listing</mat-card-title>
+      <button mat-raised-button (click)="addCustomer()">Add +</button>
+    </mat-card-header>
+    <mat-card-content>
+      <table mat-table [dataSource]="dataSource" matSort>
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef>Email</th>
-        <td mat-cell *matCellDef="let element">{{ element.email }}</td>
-      </ng-container>
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef>Email</th>
+          <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="address">
-        <th mat-header-cell *matHeaderCellDef>Address</th>
-        <td mat-cell *matCellDef="let element">{{ element.address }}</td>
-      </ng-container>
+        <ng-container matColumnDef="address">
+          <th mat-header-cell *matHeaderCellDef>Address</th>
+          <td mat-cell *matCellDef="let element">{{ element.address }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef>Action</th>
-        <td mat-cell *matCellDef="let element">
-          <button
-            mat-raised-button
-            color="primary"
-            style="margin-right: 15px"
-            (click)="updateCustomer(element.id)"
-          >
-            Update
-          </button>
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef>Action</th>
+          <td mat-cell *matCellDef="let element">
+            <button
+              mat-raised-button
+              color="primary"
+              style="margin-right: 15px"
+              (click)="updateCustomer(element.id)"
+            >
+              Update
+            </button>
 
-          <button
-            (click)="removecustomer(element.id)"
-            mat-raised-button
-            color="accent"
-          >
-            Delete
-          </button>
-        </td>
-      </ng-container>
+            <button
+              (click)="removecustomer(element.id)"
+              mat-raised-button
+              color="accent"
+            >
+              Delete
+            </button>
+          </td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-    <mat-paginator
-      [pageSizeOptions]="[5, 10, 20]"
-      showFirstLastButtons
-      aria-label="Select page of periodic elements"
-    >
-    </mat-paginator>
-  </mat-card-content>
-</mat-card>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+      <mat-paginator
+        [pageSizeOptions]="[5, 10, 20]"
+        showFirstLastButtons
+        aria-label="Select page of periodic elements"
+      >
+      </mat-paginator>
+    </mat-card-content>
+  </mat-card>
+</div>
